--- a/invenso/package.json
+++ b/invenso/package.json
@@ -23,6 +23,7 @@
     "html-to-image": "^1.11.13",
     "lottie": "^0.0.1",
     "lottie-react": "^2.4.1",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-day-picker": "^9.6.6",
     "react-dom": "^19.0.0",
