--- a/package.json
+++ b/package.json
@@ -1,5 +1,46 @@
 {
+  "name": "invenso",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "axios": "^1.9.0"
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@heroicons/react": "^2.2.0",
+    "@material-tailwind/react": "^2.1.10",
+    "@mui/material": "^7.0.2",
+    "@tailwindcss/vite": "^4.0.14",
+    "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
+    "formik": "^2.4.6",
+    "heroicons": "^2.2.0",
+    "html-to-image": "^1.11.13",
+    "lottie": "^0.0.1",
+    "lottie-react": "^2.4.1",
+    "qrcode": "^1.5.4",
+    "react": "^19.0.0",
+    "react-day-picker": "^9.6.6",
+    "react-dom": "^19.0.0",
+    "react-qr-code": "^2.0.15",
+    "react-router-dom": "^7.3.0",
+    "tailwindcss": "^4.0.14"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.21.0",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.21.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^15.15.0",
+    "vite": "^6.2.0"
   }
+
 }
